Links to various pages added in profile section

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -16,7 +16,7 @@
       </div>
       <div class="row">
         <img
-          src="/assets/images/devathi.jpg"
+          src="/assets/images/swaroop.jpg"
           alt="Profile"
           height="500px"
         />
