--- a/src/app/friends/friends.component.html
+++ b/src/app/friends/friends.component.html
@@ -25,9 +25,9 @@
   <body>
     <div
       class="container justify-content-md-center"
-      style="margin-top: 150px; background-color: white"
+      style="margin-top: 100px; background-color: white"
     >
-      <div class="row shadow p-3 mb-5 bg-white rounded">
+      <div class="row ">
         <h2  style="text-align:center;margin:20px;">Your Friends List</h2>
         <div
           class="col col-md-5  friendcard justify-content-md-center"
