--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -28,11 +28,11 @@
                      <h4>Devathi Mahesh</h4>
                     <button class="col col-md-8 btn btn-outline-dark">Upload Photo</button>
                     
-                    <button class="col col-md-8 btn btn-outline-dark">Friends(5)</button>
-                    <button class="col col-md-8 btn btn-outline-dark">Besties(2)</button>
-                    <button class="col col-md-8 btn btn-outline-dark">Memories(2)</button>
-                    <button class="col col-md-8 btn btn-outline-dark">Gifts(10)</button>
-                    <button class="col col-md-8 btn btn-outline-dark">Orders(5)</button>
+                    <button class="col col-md-8 btn btn-outline-dark" (click)="loadComponent('friends')">Friends(5)</button>
+                    <button class="col col-md-8 btn btn-outline-dark" (click)="loadComponent('besties')">Besties(2)</button>
+                    <button class="col col-md-8 btn btn-outline-dark" (click)="loadComponent('memories')"> Memories(2)</button>
+                    <button class="col col-md-8 btn btn-outline-dark" (click)="loadComponent('gifts')">Gifts(10)</button>
+                    <button class="col col-md-8 btn btn-outline-dark" (click)="loadComponent('orders')">Orders(5)</button>
                 </div>
                 </div>
                 <div class="col col-md-8">
