--- a/src/app/remcard/remcard.component.html
+++ b/src/app/remcard/remcard.component.html
@@ -3,12 +3,12 @@
   <head>
     <style>
       .rcard {
-        background-color: #367fa3;
+        background-color: #e9e0e0;
         padding: 5px;
         margin-left: 20px;
         margin-right: 10px;
         margin-bottom: 15px;
-        color: white;
+        color: black;
         border-radius: 10px;
       }
     </style>
